[tool.poetry]
name = "losuapi"
version = "0.2.2"
description = "Python wrapper for the Osu apiV2"
authors = ["Darien Moore <LiskIsBest@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/LiskIsBest/Losuapi/"
repository = "https://github.com/LiskIsBest/Losuapi/tree/v0.2.2/"
keywords = ["python", "osu", "api", "wrapper"]
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.10"
anyio = "3.6.2"
certifi = "2022.12.7"
h11 = "0.14.0"
httpcore = "0.16.3"
httpx = "0.23.3"
idna = "3.4"
pydantic = "1.10.4"
rfc3986 = "1.5.0"
sniffio = "1.3.0"
typing-extensions = "4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
